jenkins/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-external
  namespace: argocd
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081

---
apiVersion: v1
kind: Endpoints
metadata:
  name: jenkins-external
  namespace: argocd
subsets:
  - addresses:
      - ip: 192.168.45.87
    ports:
      - name: http
        port: 8081

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jenkins.bidding-go.shop
      secretName: jenkins-tls
  rules:
    - host: jenkins.bidding-go.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-external
                port:
                  number: 8081
